# grosme

./: .env.example  .envrc  .gitignore  LICENSE  Makefile  README.md  agent.py  main.py  model.py  notes.py  notify.py  pyproject.toml  schemas.py  tools.py  walmart_search.py
benchmarks/: accuracy.py
tests/: uat_memo.py  uat_query.py  uat_runner.py
