[project]
name = "grosme"
version = "0.1.0"
description = "Grocery Shopping Made Easy — Apple Notes to Walmart cart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
grosme = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "model.py",
    "models.py",
    "notes.py",
    "tools.py",
    "walmart_search.py",
    "notify.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
