[project]
name = "grosme"
version = "0.2.0"
description = "Grocery Shopping Made Easy — Apple Notes to Walmart cart"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "ollama>=0.4",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "rich>=13.0",
    "scrapling[fetchers]>=0.4",
    "typer>=0.12",
]

[project.scripts]
grosme = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "main.py",
    "agent.py",
    "schemas.py",
    "tools.py",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
